<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_developer"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginBottom="@dimen/margin_vertical_section"
        android:elevation="10dp"
        android:src="@drawable/img_dev_pic"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tv_author_name"
        style="@style/TextStyles.Raleway.Dark.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/author_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/tv_author_email"
        style="@style/TextStyles.Raleway.Dark.Regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/author_email"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_author_name" />

    <ImageButton
        android:id="@+id/btn_github"
        style="@style/Button.Transparent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/cd_button_image"
        android:src="@drawable/ic_github"
        app:layout_constraintEnd_toStartOf="@+id/btn_instagram"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/btn_mail"
        app:layout_constraintTop_toBottomOf="@+id/tv_author_email" />

    <ImageButton
        android:id="@+id/btn_mail"
        style="@style/Button.Transparent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal_section"
        android:contentDescription="@string/cd_button_gmail"
        android:src="@drawable/ic_gmail"
        app:layout_constraintEnd_toStartOf="@id/btn_github"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_github" />

    <ImageButton
        android:id="@+id/btn_instagram"
        style="@style/Button.Transparent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_horizontal_section"
        android:contentDescription="@string/cd_button_instagram"
        android:src="@drawable/ic_instagram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_github"
        app:layout_constraintTop_toTopOf="@+id/btn_github" />


</androidx.constraintlayout.widget.ConstraintLayout>