<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movies.dashboard.MovieFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_image_slider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/backdrop_height"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                style="@style/TextStyles.Raleway.Dark.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_section"
                android:layout_marginTop="@dimen/margin_vertical_section"
                android:text="@string/topRated"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vp_image_slider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_top_rated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="@dimen/margin_horizontal_section"
                android:paddingTop="8dp"
                android:paddingEnd="@dimen/margin_horizontal_section"
                android:paddingBottom="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:spanCount="4"
                tools:listitem="@layout/item_mov_poster" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TextStyles.Raleway.Dark.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_section"
                android:layout_marginTop="@dimen/margin_vertical_content"
                android:text="@string/popular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_top_rated" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_populars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_sub_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingStart="@dimen/margin_horizontal_section"
                android:paddingEnd="@dimen/margin_horizontal_section"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:spanCount="2"
                tools:itemCount="2"
                tools:listitem="@layout/item_mov_backdrop_mini" />

            <ProgressBar
                android:id="@+id/pb_loading_list"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:paddingTop="@dimen/margin_vertical_content"
                android:paddingBottom="@dimen/margin_vertical_content"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@+id/tv_loading"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_populars" />

            <TextView
                android:id="@+id/tv_loading"
                style="@style/TextStyles.Raleway.Dark.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_section"
                android:text="@string/loading"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/pb_loading_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/pb_loading_list"
                app:layout_constraintTop_toTopOf="@+id/pb_loading_list" />

            <ImageButton
                android:id="@+id/btn_top_rated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_horizontal_section"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cd_go_to_top_rated_page"
                android:src="@drawable/ic_detail"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
