<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBrand"
    tools:context=".ui.movies.details.MovieDetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_backdrop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/backdrop_height"
                android:contentDescription="@string/cd_movie_backdrop"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@id/iv_transparent"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/cd_movie_backdrop"
                android:src="@drawable/shape_rec_bg_black_gradient"
                app:layout_constraintBottom_toBottomOf="@id/iv_backdrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_title_details"
                style="@style/TextStyles.Raleway.Light.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_content"
                android:layout_marginEnd="@dimen/margin_horizontal_content"
                app:layout_constraintBottom_toTopOf="@id/tv_genre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="@+id/cardView"
                app:layout_constraintVertical_chainStyle="spread"
                tools:text="Black Widow" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="@dimen/poster_width"
                android:layout_height="@dimen/poster_height"
                android:layout_marginStart="@dimen/margin_horizontal_section"
                android:layout_marginTop="@dimen/margin_vertical_content"
                android:scaleType="centerCrop"
                app:cardCornerRadius="@dimen/corner_radius"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_transparent">

                <ImageView
                    android:id="@+id/iv_poster_details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:contentDescription="@string/cd_movie_poster"
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_genre"
                style="@style/TextStyles.Raleway.Gray.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_content"
                android:layout_marginEnd="@dimen/margin_horizontal_content"
                app:layout_constraintBottom_toTopOf="@id/tv_years_duration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_details"
                tools:text="Adventure • Action • Crime" />

            <TextView
                android:id="@+id/tv_years_duration"
                style="@style/TextStyles.Raleway.Gray.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_content"
                android:layout_marginEnd="@dimen/margin_horizontal_content"
                app:layout_constraintBottom_toTopOf="@id/tv_production_company"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre"
                tools:text="2020 • 69 m" />


            <TextView
                android:id="@+id/tv_production_company"
                style="@style/TextStyles.Raleway.Gray.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_content"
                android:layout_marginEnd="@dimen/margin_horizontal_content"
                app:layout_constraintBottom_toTopOf="@id/rb_rating_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/tv_years_duration"
                tools:text="Marvel Studio • Marvel Studio" />

            <RatingBar
                android:id="@+id/rb_rating_details"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_content"
                android:numStars="5"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/redBrand"
                android:rating="3.5"
                app:layout_constraintBottom_toTopOf="@id/tv_tagline"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/tv_production_company" />

            <TextView
                android:id="@+id/tv_rating_details"
                style="@style/TextStyles.Raleway.Gray.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_sub_content"
                app:layout_constraintBottom_toBottomOf="@+id/rb_rating_details"
                app:layout_constraintStart_toEndOf="@+id/rb_rating_details"
                app:layout_constraintTop_toTopOf="@+id/rb_rating_details"
                tools:text="6.0 (1325)" />

            <TextView
                android:id="@+id/tv_tagline"
                style="@style/TextStyles.Raleway.Gray.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_content"
                android:layout_marginEnd="@dimen/margin_horizontal_content"
                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/rb_rating_details"
                tools:text="Her world. Her secrets. Her legacy." />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_watchlist"
                style="@style/Button.Transparent"
                android:layout_marginStart="@dimen/margin_horizontal_content"
                android:layout_marginTop="@dimen/margin_vertical_section"
                android:drawableStart="@drawable/ic_add"
                android:drawablePadding="@dimen/margin_sub_content"
                android:text="@string/watchlist"
                app:layout_constraintEnd_toStartOf="@id/btn_share"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_share"
                style="@style/Button.Transparent"
                android:layout_marginEnd="@dimen/margin_horizontal_content"
                android:drawableStart="@drawable/ic_share"
                android:text="@string/share"
                app:layout_constraintBottom_toBottomOf="@+id/btn_add_watchlist"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_add_watchlist"
                app:layout_constraintTop_toTopOf="@+id/btn_add_watchlist" />

            <TextView
                android:id="@+id/tv_synopsis_details"
                style="@style/TextStyles.Raleway.Light.Regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_content"
                android:layout_marginTop="@dimen/margin_vertical_content"
                android:lineSpacingMultiplier="1.3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_add_watchlist"
                tools:text="Lorem ipsum is color dolor si amet. Lorem ipsum is color dolor si amet. Lorem ipsum is color dolor si amet. Lorem ipsum is color dolor si amet.Lorem ipsum is color dolor si amet.Lorem ipsum is color dolor si amet " />

            <TextView
                android:id="@+id/tv_similar"
                style="@style/TextStyles.Raleway.Light.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_section"
                android:layout_marginTop="@dimen/margin_vertical_section"
                android:text="@string/movies_like_this"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_synopsis_details" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_similar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_vertical_content"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingStart="@dimen/margin_horizontal_section"
                android:paddingEnd="@dimen/margin_horizontal_section"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_similar"
                app:spanCount="2"
                tools:itemCount="20"
                tools:listitem="@layout/item_mov_backdrop_mini" />

            <ProgressBar
                android:id="@+id/pb_loading_list"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:paddingTop="@dimen/margin_vertical_content"
                android:paddingBottom="@dimen/margin_vertical_content"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@+id/tv_loading"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_similar" />

            <TextView
                android:id="@+id/tv_loading"
                style="@style/TextStyles.Raleway.Light.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_section"
                android:text="@string/loading"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/pb_loading_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/pb_loading_list"
                app:layout_constraintTop_toTopOf="@+id/pb_loading_list" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>